<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/ratingBar1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/Favorite"
        android:scaleType="fitXY"
        android:src="@drawable/parks_candlelight_park_1" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/imageView1"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/Address"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/open_hours"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="" />

            <TextView
                android:id="@+id/ratings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/Ratings"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/phone"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/reviews"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/reviews_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/imageView1"
        android:background="#00000000"
        android:contentDescription="@string/Favorite"
        android:scaleType="fitXY"
        android:src="@drawable/favorite_pressed"
        android:visibility="gone" />

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/imageButton1"
        android:gravity="center_horizontal"
        android:padding="3dp"
        android:text="@string/app_name"
        android:textColor="#ff004300"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <RatingBar
        android:id="@+id/ratingBar1"
        style="@style/custom_ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/name"
        android:layout_marginLeft="10dp" />

</RelativeLayout>